<resources>
    <string name="app_name">GreenSense</string>
    <string name="email">Email</string>
    <string name="auth_failed">Authentication failed, check your email and password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="greensense_logo">GreenSense Logo</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cactus">Cactus, (family Cactaceae), plural cacti or cactuses, flowering plant family (order Caryophyllales with more than 2,000 species and about 175 genera. Cacti are native through most of the length of North and South America, from British Columbia and Alberta southward; the southernmost limit of their range extends far into Chile and Argentina. Mexico has the greatest number and variety of species. The only cacti possibly native to the Old World are members of the genus Rhipsalis, occurring in East Africa, Madagascar, and Sri Lanka. Although a few cactus species inhabit tropical or subtropical areas, most live in and are well adapted to dry regions. See also list of plants in the family Cactaceae.</string>
    <string name="herbs">In general use, herbs are plants with savory or aromatic properties that are used for flavoring and garnishing food, medicinal purposes, or for fragrances; excluding vegetables and other plants consumed for macronutrients. Culinary use typically distinguishes herbs from spices. Herbs generally refers to the leafy green or flowering parts of a plant (either fresh or dried), while spices are usually dried and produced from other parts of the plant, including seeds, bark, roots and fruits.

Herbs have a variety of uses including culinary, medicinal, and in some cases, spiritual. General usage of the term "herb" differs between culinary herbs and medicinal herbs; in medicinal or spiritual use, any parts of the plant might be considered as "herbs", including leaves, roots, flowers, seeds, root bark, inner bark (and cambium), resin and pericarp.

The word "herb" is pronounced /hɜːrb/ in Commonwealth English, but /ɜːrb/ is common among North American English speakers and those from other regions where h-dropping occurs. In botany, the word "herb" is used as a synonym for "herbaceous plant".</string>
    <string name="ferns">A fern is a member of a group of vascular plants (plants with xylem and phloem) that reproduce via spores and have neither seeds nor flowers. They differ from mosses by being vascular, i.e., having specialized tissues that conduct water and nutrients and in having life cycles in which the sporophyte is the dominant phase. Ferns have complex leaves called megaphylls, that are more complex than the microphylls of clubmosses. Most ferns are leptosporangiate ferns, sometimes referred to as true ferns. They produce coiled fiddleheads that uncoil and expand into fronds.[3] The group includes about 10,560 known extant species.

Ferns are defined here in the broad sense, being all of the Polypodiopsida, comprising both the leptosporangiate (Polypodiidae) and eusporangiate ferns, the latter itself comprising ferns other than those denominated true ferns, including horsetails or scouring rushes, whisk ferns, marattioid ferns, and ophioglossoid ferns.</string>
    <string name="conifers">The Conifers are cone-bearing seed plants. Most are trees; some are shrubs. They are formally the Division Pinophyta or Coniferophyta.

Conifers are Gymnosperms. They are cone-bearing seed plants with vascular tissue. All living conifers are woody plants, and most are trees.

Living conifers are all in the order Pinales. Typical examples include cedars, cypresses, firs, junipers, kauris, larches, pines, redwoods, spruces, and yews.

Species of conifers can be found in almost all parts of the world, and are often the most common plants in their habitats, as in the taiga. Conifers are of great economic value, and their wood is mainly used for timber and paper making The wood of conifers is known as softwood, though yew wood is actually quite hard. The division Coniferae contains about 700 living species.</string>
    <string name="type_here">Type Here</string>
    <string name="Home">Home</string>
    <string name="Green_House_2">Greenhouse 2</string>
    <string name="Green_House_1">Greenhouse 1</string>
    <string name="Notes">Notes</string>
    <string name="ByO">Build Guide</string>
    <string name="contactUs">Contact Us</string>
    <string name="Green_House_test">Greenhouse View</string>
    <string name="msgSent">Message Sent Successfully</string>
    <string name="featErr">Sorry, feature not working</string>
    <string name="wrongErr">Something went wrong</string>
    <string name="comingSoon">Feature coming soon</string>
    <string name="tempEq">Temperature =</string>
    <string name="cels">C</string>
    <string name="humEq">Humidity =</string>
    <string name="humVal">RM(%)</string>
    <string name="soilmoisEq">Soil Moisture =</string>
    <string name="moisVal">rPH</string>
    <string name="locationOn">Turn on location</string>
    <string name="dataErr">Error Retrieving Data; Location Not Available</string>
    <string name="windMes">m/s</string>
    <string name="presMes">hpa</string>
    <string name="entEmail">Enter email address!</string>
    <string name="entPass">Enter password!</string>
    <string name="confirm">Are you sure?</string>
    <string name="delNote">Do you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="docErr">Error getting documents.</string>
    <string name="welcome_to">Welcome to\u0020</string>
    <string name="plGreen">\'s Greenhouse</string>
    <string name="greenhouse_devices">GREENHOUSE DEVICES</string>
    <string name="status_of_light">LIGHT LEVELS</string>
    <string name="status_of_blinds">BLIND LEVELS</string>
    <string name="device_1">DEVICE 1</string>
    <string name="device_2">DEVICE 2</string>
    <string name="device_3">DEVICE 3</string>
    <string name="device_4">DEVICE 4</string>
    <string name="welcome_guest">Guest</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="cactusTxt">Cactus</string>
    <string name="herbsTxt">Herbs</string>
    <string name="fernsTxt">Ferns</string>
    <string name="conifersTxt">Conifers</string>
    <string name="greenhouse_temp_amp_humidity"><![CDATA[GREENHOUSE TEMP & HUMIDITY]]></string>
    <string name="greenhouse_temperature">GREENHOUSE TEMPERATURE</string>
    <string name="greenhouse_humidity">GREENHOUSE HUMIDITY</string>
    <string name="greenhouse_moisture">GREENHOUSE MOISTURE</string>
    <string name="build_your_own">Build Your Own</string>
    <string name="youtube">Youtube</string>
    <string name="website">Website</string>
    <string name="parts">Parts</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="name_ex">Austin Tate</string>
    <string name="email_ex">austin@gmail.com</string>
    <string name="describe">Describe</string>
    <string name="i_need_help_in">I need help in…</string>
    <string name="send">Send</string>
    <string name="welcome_to_greenhouse_1">Welcome to Greenhouse 1</string>
    <string name="greenhouse_control_system">GREENHOUSE CONTROL SYSTEM</string>
    <string name="remote_device">REMOTE DEVICE</string>
    <string name="temperature_humidity_amp_nmoisture"><![CDATA[Temperature Humidity & Moisture]]></string>
    <string name="manual_control">Manual Control</string>
    <string name="welcome_to_greenhouse_2">Welcome to Greenhouse 2</string>
    <string name="settings">Settings</string>
    <string name="Darkmode">Dark mode</string>
    <string name="aboutus">About Us</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="light_north">North Lights</string>
    <string name="light_south">South Lights</string>
    <string name="light_east">East Lights</string>
    <string name="light_west">West Lights</string>
    <string name="blind_north">North Blinds</string>
    <string name="blind_south">South Blinds</string>
    <string name="blind_east">East Blinds</string>
    <string name="blind_west">West Blinds</string>
    <string name="add_notes">Add notes</string>
    <string name="signout">Sign Out</string>
    <string name="Help">Help</string>
    <string name="Camera">Camera</string>
    <string name="invalEm">Invalid Email</string>
    <string name="Green_Houses">Greenhouses</string>
    <string name="selectGreenhouse">Select the Greenhouse you\'d like to view</string>
    <string name="abt_us_redirect">Already in about us</string>
    <string name="alrtTitle">GreenSense</string>
    <string name="alrtMsg">Are you sure you want to leave?</string>
    <string name="alrtYes">Yes</string>
    <string name="alrtNo">No</string>
    <string name="greensenseTitle">GreenSense</string>
    <string name="clouds">clouds</string>
    <string name="wind">wind</string>
    <string name="mist">mist</string>
    <string name="rain">rain</string>
    <string name="sunny">sunny</string>
    <string name="snow">snow</string>
    <string name="storm">storm</string>
    <string name="abtTitle">About Us</string>
    <string name="guestTitle">GreenSense Guest</string>
    <string name="noteTitle">Create Note</string>
    <string name="setSave">Settings saved</string>
    <string name="setTitle">Settings</string>
    <string name="defaulEmail">greensense@gmail.com</string>
    <string name="sett_redirect">Already in settings</string>
    <string name="settingsBGcol">Change login screen color:</string>
    <string name="BGcol1">Orange</string>
    <string name="BGcol2">Green</string>
    <string name="BGcol3">Gray</string>
    <string name="saveSetts">Save</string>
    <string-array name="greenhouses">
        <item>Greenhouse 1</item>
        <item>Greenhouse 2</item>
    </string-array>
</resources>
