<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_picture"
        app:showAsAction="ifRoom"
        android:title="@string/Camera"
        android:icon="@drawable/ic_camera_light"/>
    <item
        android:id="@+id/action_about"
        app:showAsAction="never"
        android:title="@string/aboutus">
    </item>
    <item
        android:id="@+id/action_help"
        app:showAsAction="never"
        android:title="@string/Help" />
    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/settings">
    </item>
    <item
        android:id="@+id/action_signout"
        app:showAsAction="never"
        android:title="@string/signout">
    </item>

</menu>