<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_frag" />

    <fragment
        android:id="@+id/navigation_greenhouse1"
        android:label="@string/Green_House_1"
        tools:layout="@layout/fragment_greenhouse1_frag" />

    <fragment
        android:id="@+id/navigation_greenhouse2"
        android:label="@string/Green_House_2"
        tools:layout="@layout/fragment_greenhouse2_frag" />

    <fragment
        android:id="@+id/navigation_notes"
        android:label="@string/Notes"
        tools:layout="@layout/fragment_notes_frag" />
</navigation>