<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contact_us">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/std50"
        android:background="@color/white"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/std5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/name_ex"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ll_name"
            android:padding="@dimen/std5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/email_ex"

                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:importantForAutofill="no" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/ll_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_email"
            android:orientation="vertical"
            android:padding="@dimen/std5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/describe" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="@dimen/dips379"
                android:layout_height="@dimen/dips137"
                android:backgroundTint="@color/white"
                android:gravity="start"
                android:hint="@string/i_need_help_in"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/std10" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/std30"
            android:layout_below="@id/ll_description"
            android:background="@color/colorPrimary"
            android:padding="@dimen/std10"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>
</FrameLayout>