<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".greenhouse1_frag"
    android:background="@drawable/background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/tvGreenSense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/welcome_to_greenhouse_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rlRemoteDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvGreenSense"
            android:background="@drawable/round_bg_white"
            android:layout_marginEnd="@dimen/padding_start_end_20dp"
            android:layout_marginStart="@dimen/padding_start_end_20dp"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/tvGreenHouseControlSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greenhouse_control_system"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/middle_text_size"
                android:textStyle="bold"
                android:textColor="@android:color/black" />


            <ImageView
                android:id="@+id/ivRemote"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/tvGreenHouseControlSystem"
                android:layout_toStartOf="@id/tvRemoteDevice"
                android:src="@drawable/remote"
                android:contentDescription="@string/app_name" />


            <TextView
                android:id="@+id/tvRemoteDevice"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvGreenHouseControlSystem"
                android:layout_centerHorizontal="true"
                android:text="@string/remote_device"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:layout_below="@id/tvRemoteDevice"
                android:textStyle="bold"
                android:theme="@style/SCBSwitch" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlRemoteDevice"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <FrameLayout
                    android:id="@+id/flTempAndHumidity"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_bg_white">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/temperature"
                        android:layout_marginTop="@dimen/padding_start_end_20dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/app_name" />


                    <TextView
                        android:id="@+id/fl_plant_ferns"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="30dp"
                        android:paddingStart="@dimen/padding_start_end_20dp"
                        android:paddingEnd="@dimen/padding_start_end_20dp"
                        android:text="@string/temperature_humidity_amp_nmoisture"
                        android:textColor="@color/green"
                        android:textSize="@dimen/small_text_size" />


                </FrameLayout>


                <FrameLayout
                    android:id="@+id/flManualControl"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:paddingStart="@dimen/padding_start_end_20dp"
                    android:background="@drawable/rounded_button_white"
                    android:paddingEnd="@dimen/padding_start_end_20dp">


                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/controls"
                        android:layout_marginTop="@dimen/padding_start_end_20dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/app_name" />


                    <TextView
                        android:id="@+id/tvManualControl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="30dp"
                        android:textSize="@dimen/middle_text_size"
                        android:paddingStart="@dimen/padding_start_end_15dp"
                        android:paddingEnd="@dimen/padding_start_end_15dp"
                        android:text="@string/manual_control" />


                </FrameLayout>

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
</FrameLayout>